# subtitle-generator

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  asub.spec  pyproject.toml  subtitler.spec
.github/workflows/: python-publish.yml
src/asub/: __init__.py  __main__.py  cli.py  progress.py  subtitle.py  transcriber.py  translator.py
src/subtitler/: __init__.py  __main__.py  cli.py  subtitle.py  translator.py
tests/: test_cli.py  test_cli_batch.py  test_subtitle.py
