[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitler-generator"
version = "0.1.0"
description = "Generate and translate subtitles from audio/video files using Whisper."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "subtitler contributors" }]
keywords = ["subtitles", "whisper", "transcription", "translation", "srt", "vtt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "faster-whisper>=1.0.0,<2.0.0",
    "deep-translator>=1.11.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "pyinstaller>=6.0",
]

[project.scripts]
subtitler = "subtitler.cli:main"

[project.urls]
Homepage = "https://github.com/simoneraffaelli/subtitler"
Repository = "https://github.com/simoneraffaelli/subtitler"
Issues = "https://github.com/simoneraffaelli/subtitler/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
